bug fix y no funciona el sistema para que si ya tienes seleccionado un motor y lo vuelvas a clicar no te resetee

--- a/src/gui/MainJFrame.form
+++ b/src/gui/MainJFrame.form
@@ -10,6 +10,16 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Archivo"/>
           </Properties>
+          <SubComponents>
+            <MenuItem class="javax.swing.JMenuItem" name="nuevoJMenuItem1">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="juego nuevo"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="nuevoJMenuItem1ActionPerformed"/>
+              </Events>
+            </MenuItem>
+          </SubComponents>
         </Menu>
         <Menu class="javax.swing.JMenu" name="jMenu2">
           <Properties>
