--- a/src/org/daw1/silvio/gui/EditMotorJDialog.form
+++ b/src/org/daw1/silvio/gui/EditMotorJDialog.form
@@ -158,6 +158,7 @@
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="altaJTextFieldActionPerformed"/>
+                <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="altaJTextFieldKeyPressed"/>
               </Events>
             </Component>
             <Component class="javax.swing.JButton" name="altaJButton">
@@ -221,6 +222,7 @@
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bajaJTextFieldActionPerformed"/>
+                <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="bajaJTextFieldKeyPressed"/>
               </Events>
             </Component>
             <Component class="javax.swing.JButton" name="bajaJButton">
