--- a/src/org/daw1/silvio/gui/EditMotorJDialog.form
+++ b/src/org/daw1/silvio/gui/EditMotorJDialog.form
@@ -3,6 +3,7 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
+    <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -163,6 +164,9 @@
             </Component>
             <Component class="javax.swing.JButton" name="altaJButton">
               <Properties>
+                <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="96" green="96" red="96" type="rgb"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Alta"/>
               </Properties>
               <Events>
@@ -227,6 +231,9 @@
             </Component>
             <Component class="javax.swing.JButton" name="bajaJButton">
               <Properties>
+                <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="96" green="96" red="96" type="rgb"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="baja"/>
               </Properties>
               <Events>
